src/test/deca/syntax/invalid/created/only_one_value_type/all_reserved_tokens.deca
// Description :
// Fichier contenant tous les mots réservés.
//
// Resultats :
//    Ligne 7 : no viable alternative at input 'asm'

asm
class
extends
else
false
if
instanceof
new
null
readInt
readFloat
print
println
printlnx
printx
protected
return
this
true
while
=
+
-
*
%
/
.
,
;
(
)
{
}
<
>
>=
<=
==
!=
!
&&
||
